// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`legacy > for query 'er.life360': 'device-tracker.life360_iphone_6' > 'sendor.battery_life360_iphone_6' 1`] = `
[
  [
    "e",
    "r",
    ".",
    "l",
    "i",
    "f",
    "e",
    "3",
    "6",
    "0",
  ],
  [
    "d",
    "e",
    "v",
    "i",
    "c",
    "e",
    "-",
    "t",
    "r",
    "a",
    "c",
    "k",
    "e",
    "r",
    ".",
    "l",
    "i",
    "f",
    "e",
    "3",
    "6",
    "0",
    "_",
    "i",
    "p",
    "h",
    "o",
    "n",
    "e",
    "_",
    "6",
  ],
  [
    1,
    8,
    14,
    15,
    16,
    17,
    18,
    19,
    20,
    21,
  ],
  false,
  [
    6,
    6,
    6,
    6,
    6,
    6,
    7,
    14,
    14,
    14,
    14,
    14,
    14,
    14,
    15,
    22,
    22,
    22,
    22,
    22,
    22,
    22,
    23,
    29,
    29,
    29,
    29,
    29,
    29,
    30,
    31,
  ],
]
`;

exports[`legacy > for query 'er.life360': 'device-tracker.life360_iphone_6' > 'sendor.battery_life360_iphone_6' 2`] = `
[
  1,
  8,
  14,
  15,
  16,
  17,
  18,
  19,
  20,
  21,
]
`;

exports[`legacy > for query 'er.life360': 'device-tracker.life360_iphone_6' > 'sendor.battery_life360_iphone_6' 3`] = `
[
  [
    "e",
    "r",
    ".",
    "l",
    "i",
    "f",
    "e",
    "3",
    "6",
    "0",
  ],
  [
    "s",
    "e",
    "n",
    "d",
    "o",
    "r",
    ".",
    "b",
    "a",
    "t",
    "t",
    "e",
    "r",
    "y",
    "_",
    "l",
    "i",
    "f",
    "e",
    "3",
    "6",
    "0",
    "_",
    "i",
    "p",
    "h",
    "o",
    "n",
    "e",
    "_",
    "6",
  ],
  [
    1,
    5,
    6,
    15,
    16,
    17,
    18,
    19,
    20,
    21,
  ],
  false,
  [
    6,
    6,
    6,
    6,
    6,
    6,
    7,
    14,
    14,
    14,
    14,
    14,
    14,
    14,
    15,
    22,
    22,
    22,
    22,
    22,
    22,
    22,
    23,
    29,
    29,
    29,
    29,
    29,
    29,
    30,
    31,
  ],
]
`;

exports[`legacy > for query 'er.life360': 'device-tracker.life360_iphone_6' > 'sendor.battery_life360_iphone_6' 4`] = `
[
  1,
  5,
  6,
  15,
  16,
  17,
  18,
  19,
  20,
  21,
]
`;

exports[`legacy > for query 'note': 'node/NoTe' > 'not one that evening' 1`] = `
[
  [
    "n",
    "o",
    "t",
    "e",
  ],
  [
    "n",
    "o",
    "d",
    "e",
    "/",
    "n",
    "o",
    "t",
    "e",
  ],
  [
    0,
    1,
    7,
    8,
  ],
  true,
  [
    4,
    4,
    4,
    4,
    5,
    7,
    7,
    9,
    9,
  ],
]
`;

exports[`legacy > for query 'note': 'node/NoTe' > 'not one that evening' 2`] = `
[
  0,
  1,
  7,
  8,
]
`;

exports[`legacy > for query 'note': 'node/NoTe' > 'not one that evening' 3`] = `
[
  [
    "n",
    "o",
    "t",
    "e",
  ],
  [
    "n",
    "o",
    "t",
    " ",
    "o",
    "n",
    "e",
    " ",
    "t",
    "h",
    "a",
    "t",
    " ",
    "e",
    "v",
    "e",
    "n",
    "i",
    "n",
    "g",
  ],
  [
    0,
    1,
    2,
    13,
  ],
  true,
  [
    3,
    3,
    3,
    4,
    7,
    7,
    7,
    8,
    12,
    12,
    12,
    12,
    13,
    20,
    20,
    20,
    20,
    20,
    20,
    20,
  ],
]
`;

exports[`legacy > for query 'note': 'node/NoTe' > 'not one that evening' 4`] = `
[
  0,
  1,
  2,
  13,
]
`;
